--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rushm\AppData\Local\Temp\testng-eclipse-2032028805\testng-customsuite.xml</span>
+                    <span>C:\Users\rushm\AppData\Local\Temp\testng-eclipse-1838142122\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rushm\AppData\Local\Temp\testng-eclipse-2032028805\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rushm\AppData\Local\Temp\testng-eclipse-1838142122\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;crudOperationsTest.PostOPerations&quot;/&gt;
+      &lt;class name=&quot;crudOperationsTest.PostOPerations&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;addSingleProjectWithCreated&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- crudOperationsTest.PostOPerations --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,12 +193,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addSingleProjectWithCreated')
 data.setCell(0, 2, 'crudOperationsTest.PostOPerations')
-data.setCell(0, 3, 6076);
+data.setCell(0, 3, 9494);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +225,13 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">crudOperationsTest.PostOPerations</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">requestResponseSpecBuilder</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">addSingleProjectWithCreated</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">1232 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
